--- a/Ooit1/.project
+++ b/Ooit1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Ooit1</name>
+	<name>Rekapitulacija</name>
 	<comment></comment>
 	<projects>
 	</projects>
